tests/errors/semantic/blocking/UPDATE_SET_INCOMPATIBLE_TYPES_2.py
# Expecting an argument of the same type as the elements of the set
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {2, 9, 5}
b = {8.9, 6.}
a.update(b)
